# mysite

./: .djlintrc  .gitignore  db.sqlite3  main.py  pyproject.toml
_media/blog/files/2025/04/29/: 연차사용신청서-20-1-1.xlsx
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_updated_at_alter_post_created_at.py  0003_post_head_image.py  0004_post_file_image.py  0005_rename_file_image_post_file_upload.py  0006_alter_post_file_upload.py  0007_post_hook_text.py  0008_post_author.py  0009_alter_post_author.py  0010_category_post_category.py  0011_alter_category_options_alter_post_category.py  0012_tag_post_tags.py  0013_alter_post_content.py  0014_comment.py
blog/templates/blog/: base.html  comment_form.html  post_detail.html  post_form.html  post_list.html  post_update_form.html
common/: views.py
common/templates/common/: login.html  signup.html
mysite/: settings.py  urls.py
single_pages/: tests.py  views.py
single_pages/static/single_pages/css/: about_me.css  landing.css
single_pages/templates/single_pages/: about_me.html  landing.html
templates/: base.html  base_full_width.html  footer.html  navbar.html
