[project]
name = "mysite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crispy-bootstrap4>=2024.10",
    "django>=5.2",
    "django-crispy-forms>=2.4",
    "django-markdownx>=4.0.9",
    "djlint>=1.36.4",
    "pillow>=11.1.0",
]
